2008-09-26  Joel Brobecker  <brobecker@adacore.com>

	* MAINTAINERS (GLOBAL MAINTAINERS): Add Pedro Alves.

2008-09-25  Stephan Springl  <springl-gdb@bfw-online.de> (tiny change)

	* stack.c (print_frame_args): Fix typos in comments.

2008-09-25  Sérgio Durigan Júnior  <sergiodj@linux.vnet.ibm.com>

	* linux-nat.c (get_pending_status): Fix argument to WIFSTOPPED.

2008-09-24  Vladimir Prus  <vladimir@codesourcery.com>

	* remote-sim.c (gdbsim_create_inferior): Fix missing parenthesis.
	
2008-09-24  Andreas Schwab  <schwab@suse.de>

	* frame.c (get_frame_register_bytes): Take pseudo registers into
	account.  Avoid excessive function calls.

2008-09-23  Doug Evans  <dje@google.com>

	* dcache.c (state_chars): New static global.
	(ENTRY_INVALID,ENTRY_VALID): Renamed from ENTRY_BAD,ENTRY_OK.
	All uses updated.
	(dcache_info): Print cache state as mnemonically useful letters instead
	of magic numbers.

	* dwarf2read.c (comp_unit_head): Reorganize for better packing.

2008-09-22  Tom Tromey  <tromey@redhat.com>

	* symfile.c (symbol_file_add_with_addrs_or_offsets): Don't use
	printf_filtered.

2008-09-22  Pedro Alves  <pedro@codesourcery.com>

	* infrun.c (follow_exec): Don't do a generic mourn.  Instead
	inline the required bits.
	* breakpoint.h (enum inf_context): Add inf_execd.

2008-09-22  Pedro Alves  <pedro@codesourcery.com>

	* infrun.c (handle_inferior_event): In the follow exec case,
	context-switch before doing anything else.

2008-09-22  Pedro Alves  <pedro@codesourcery.com>

	* top.c (any_thread_of, kill_or_detach): New functions.
	(quit_target): Iterate over all inferiors, killing or detaching
	accordingly.

2008-09-22  Pedro Alves  <pedro@codesourcery.com>

	Remove the attach_flag global, and make it per-inferior.

	* inferior.h (attach_flag): Delete.
	(inferior_process): Declare.
	* solib.c (update_solib_list): Adjust.
	* gnu-nat.c (gnu_create_inferior, gnu_attach): Adjust.
	* inf-ptrace.c (inf_ptrace_detach): Adjust.